kustomizations/storage/jdownloader/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jdownloader
spec:
  replicas: 0
  selector:
    matchLabels:
      app: jdownloader
  template:
    metadata:
      labels:
        app: jdownloader
        state: deprecated
    spec:
      containers:
      - name: jdownloader
        image: jlesage/jdownloader-2
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 5800
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /output
      volumes:
      - name: config
        hostPath:
          path: /mnt/jdownloader
      - name: downloads
        hostPath:
          path: /mnt/multimedia/downloads
