kustomizations/storage/jdownloader/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jdownloader
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jdownloader.lan
spec:
  loadBalancerIP: 192.168.1.30
  type: LoadBalancer
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 5800
  selector:
    app: jdownloader
