kustomizations/storage/jdownloader/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jdownloader
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: jdownloader.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jdownloader
            port:
              number: 5800
